fix z-index of title

--- a/styles/style.css
+++ b/styles/style.css
@@ -290,6 +290,7 @@
 
 .section-title_theme_dark {
   color: var(--white);
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
